# EventDance

./: .gitignore  ChangeLog  INSTALL  Makefile.am  README  autogen.sh  configure.ac  evd-jhbuild.modules
demos/js/: echoServerTls.js  simpleHttpGet.js
doc/reference/: .gitignore  Makefile.am  evd-docs.xml  evd-overview.xml
evd/: .gitignore  Makefile.am  evd-0.1.pc.in  evd-0.2.pc.in  evd-buffered-input-stream.c  evd-buffered-input-stream.h  evd-buffered-output-stream.c  evd-buffered-output-stream.h  evd-connection-group.c  evd-connection-group.h  evd-connection-pool.c  evd-connection-pool.h  evd-connection.c  evd-connection.h  evd-daemon.c  evd-daemon.h  evd-dbus-agent.c  evd-dbus-agent.h  evd-dbus-bridge.c  evd-dbus-bridge.h  evd-dbus-daemon.c  evd-dbus-daemon.h  evd-error.c  evd-error.h  evd-http-chunked-decoder.c  evd-http-chunked-decoder.h  evd-http-connection.c  evd-http-connection.h  evd-http-message.c  evd-http-message.h  evd-http-request.c  evd-http-request.h  evd-http-response.c  evd-http-response.h  evd-inet-socket.c  evd-inet-socket.h  evd-io-stream-group.c  evd-io-stream-group.h  evd-io-stream.c  evd-io-stream.h  (+118 more)
evd/js/: evdDBusBridge.js  evdJsonrpc.js  evdWebTransport.js
examples/: .gitignore  Makefile.am  dbus-bridge.c  ping-server.c
examples/common/: dbus-bridge-own-name.html  dbus-bridge-proxy.html  json.js  ping.html  sharedImage.js  shared_image.html
examples/js/: dbusBridge.js  pingServer.js  sharedImage.js  sharedImageServer.js
examples/python/: dbus-bridge.py
m4/: .gitignore  javascript.m4
tests/: .gitignore  Makefile.am  dbus-daemon.conf  evd-tester.c  test-all-js.c  test-all.c  test-dbus-bridge.c  test-inet-socket.c  test-io-stream-group.c  test-json-filter.c  test-json-socket.c  test-pki.c  test-promise.c  test-resolver.c  test-socket-common.c  test-socket-context.c  test-socket.c  test-tls-cipher.c  test-websocket-transport.c
tests/certs/: openpgp-server-key.asc  openpgp-server.asc  x509-ca-key.pem  x509-ca.pem  x509-jane-key.pem  x509-jane.p12  x509-jane.pem  x509-mary-key.pem  x509-mary.p12  x509-mary.pem  x509-server-key.pem  x509-server.pem
tests/js/: run-test  test-service.js  test-socket-context.js  test-socket.js  testResolver.js  testSocket.js  testSocketGroup.js  testTlsCertificate.js
tests/js/common/: assert.js  test.js
